<resources>
    <string name="app_name">FirebaseDPA24</string>
    <string name="valetfullname">Full name</string>
    <string name="valetcountry">Country</string>
    <string name="valetemail">Email</string>
    <string name="valetpassword">Password</string>
    <string name="valbtsaveregister">SAVE</string>
    <string name="valetemaillogin">Email</string>
    <string name="valetpasswordlogin">Password</string>
    <string name="valbtlogin">LOGIN</string>
    <string name="valbtregister">REGISTER</string>
    <string name="title_activity_principal">PrincipalActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_stadium">Stadium</string>
    <string name="menu_register">Register</string>
    <string name="menu_animals">Animals</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="valbtsavecustomer">SAVE</string>
    <string name="valtitlepokemon">POKEMON</string>
    <string name="valbtsearchpokemon">SEARCH</string>
</resources>